# scales

./: .clang-format  CMakeLists.txt
src/: main.cpp
